<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="match_parent"
  android:layout_height="match_parent">
  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:orientation="vertical"
      android:background="@drawable/background"
      android:weightSum="2">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:layout_weight="1.1">
      <ImageView
          android:src="@mipmap/ic_launcher"
          android:layout_centerInParent="true"
          android:layout_width="160dp"
          android:layout_height="80dp"/>

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="#fff"
        android:orientation="vertical"
        android:layout_weight="0.9"
        >

      <LinearLayout
          android:id="@+id/ll"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginLeft="40dp"
          android:layout_marginRight="40dp"
          android:layout_marginBottom="10sp"
          android:orientation="vertical">

        <EditText
            android:id="@+id/l_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space1"
            android:background="@drawable/edittext"
            android:fontFamily="@font/roboto_light"
            android:hint="@string/email"
            android:paddingHorizontal="5dp"
            android:inputType="textEmailAddress"
            android:textColor="#000"
            android:textColorHint="#d3d3d3" />


        <EditText
            android:id="@+id/l_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space1"
            android:paddingHorizontal="5dp"
            android:background="@drawable/edittext"
            android:fontFamily="@font/roboto_light"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:maxLength="30"
            android:textColor="#000"
            android:textColorHint="#d3d3d3" />


        <TextView
            android:id="@+id/login_btn"
            android:layout_marginTop="@dimen/space1"
            android:layout_width="match_parent"
            android:layout_height="@dimen/btn_height"
            android:background="@drawable/btn"
            android:gravity="center"
            android:textColor="@color/white"
            android:text="@string/login"/>

      </LinearLayout>
      <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:gravity="center"
          android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_light"
            android:text="@string/forgot_password"
            android:layout_gravity="center"
            android:textColor="@color/black"
            android:textSize="15sp" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_light"
            android:text="     |     "
            android:layout_gravity="center"
            android:textColor="@color/black"
            android:textSize="15sp" />
        <TextView
            android:fontFamily="@font/roboto_light"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/create_account"
            android:textSize="15sp"
            android:textColor="@color/black"/>

      </LinearLayout>

      <!-- <com.facebook.login.widget.LoginButton
           android:id="@+id/login_button"
           android:layout_gravity="center"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_marginTop="15dp"
           android:layout_marginBottom="20dp" />-->
    </LinearLayout>

  </LinearLayout>




</ScrollView>