<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/background"
  android:layout_width="match_parent"
  android:layout_height="match_parent">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >

  <LinearLayout
      android:id="@+id/ll"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginLeft="32dp"
      android:layout_marginRight="32dp"
      android:layout_marginBottom="10sp"
      android:orientation="vertical">

    <TextView
        android:fontFamily="@font/sfnsdisplay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="110dp"
        android:text="@string/welcome"
        android:textColor="@color/white"
        android:textSize="28.6sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:fontFamily="@font/maven_pro_regular"
        android:textColor="@color/white"
        android:textSize="18dp" />
    <TextView
        android:onClick="createAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:fontFamily="@font/maven_pro_regular"
        android:text="@string/phone"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:textSize="18dp" />

    <EditText
        android:id="@+id/phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:background="#00000000"
        android:fontFamily="@font/roboto_light"
        android:inputType="phone"
        android:textColor="@color/black"
        android:textColorHint="@color/white" />

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginTop="9dp"
        android:background="#b9b9b9" />

    <TextView
        android:id="@+id/login_btn"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:gravity="center"
        android:padding="2dp"
        android:textColor="@color/white"
        android:textSize="18dp"
        android:text="@string/login"
        android:background="@drawable/btn2"
        android:layout_marginTop="90dp">

    </TextView>
  </LinearLayout>

  <!-- <com.facebook.login.widget.LoginButton
       android:id="@+id/login_button"
       android:layout_gravity="center"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_marginTop="15dp"
       android:layout_marginBottom="20dp" />-->
</LinearLayout>
</ScrollView>