<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
  <RelativeLayout
      android:layout_width="match_parent"
      android:layout_height="180dp">
    <FrameLayout
        android:id="@+id/profile_picture_frame"
        android:layout_marginBottom="@dimen/profile_padding"
        android:layout_centerInParent="true"
        android:layout_width="@dimen/profile_frame"
        android:layout_height="@dimen/profile_frame">
      <ImageView
          android:id="@+id/profile_picture"
          android:layout_width="@dimen/main_profile_picture"
          android:layout_height="@dimen/main_profile_picture"
          android:layout_centerInParent="true"
          android:layout_gravity="center_horizontal"
          android:onClick="onProfilePicClick"
          android:layout_marginBottom="17dp"
          />
      <LinearLayout
          android:layout_width="wrap_content"
          android:layout_height="34dp"
          android:background="@drawable/orange_btn"
          android:orientation="horizontal"
          android:gravity="center"
          android:layout_gravity="bottom|center_horizontal"
        >
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
          android:src="@drawable/ic_camera"/>
        <TextView
            android:layout_width="wrap_content"
            android:textColor="@color/white"
            android:layout_marginHorizontal="3dp"
            android:text="@string/change"
            android:layout_height="34dp"
            android:gravity="center"
            />
      </LinearLayout>


    </FrameLayout>


  </RelativeLayout>
  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
    android:orientation="vertical"
    >
    <TextView
        android:text="@string/full_name"
        android:textColor="#000"
        android:textSize="@dimen/profile_small"
        android:paddingLeft="@dimen/profile_padding"
        android:paddingRight="@dimen/profile_padding"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
      android:orientation="horizontal">
      <TextView
          android:id="@+id/first_name"
          android:layout_marginTop="@dimen/profile_margin_small"
          android:text=""
          android:textColor="#000"
          android:textSize="@dimen/profile_big"
          android:paddingLeft="@dimen/profile_padding"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          />
      <Space
          android:layout_width="5dp"
          android:layout_height="0dp"/>
      <TextView
          android:id="@+id/surname"
          android:layout_marginTop="@dimen/profile_margin_small"
          android:text=""
          android:textColor="#000"
          android:textSize="@dimen/profile_big"
          android:paddingRight="@dimen/profile_padding"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          />
    </LinearLayout>


  </LinearLayout>

  <LinearLayout
      android:layout_marginTop="@dimen/profile_margin_big"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="vertical"
      >
    <TextView
        android:text="@string/email"
        android:textColor="#000"
        android:textSize="@dimen/profile_small"
        android:paddingLeft="@dimen/profile_padding"
        android:paddingRight="@dimen/profile_padding"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />
    <TextView
        android:id="@+id/email"
        android:layout_marginTop="@dimen/profile_margin_small"
        android:text=""
        android:textColor="#000"
        android:textSize="@dimen/profile_big"
        android:paddingLeft="@dimen/profile_padding"
        android:paddingRight="@dimen/profile_padding"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />

  </LinearLayout>

  <LinearLayout
      android:layout_marginTop="@dimen/profile_margin_big"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="vertical"
      >
    <TextView
        android:text="@string/phone"
        android:textColor="#000"
        android:textSize="@dimen/profile_small"
        android:paddingLeft="@dimen/profile_padding"
        android:paddingRight="@dimen/profile_padding"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />
    <TextView
        android:id="@+id/phone"
        android:layout_marginTop="@dimen/profile_margin_small"
        android:text=""
        android:textColor="#000"
        android:textSize="@dimen/profile_big"
        android:paddingLeft="@dimen/profile_padding"
        android:paddingRight="@dimen/profile_padding"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />

  </LinearLayout>

</LinearLayout>
